/// A single question/answer pair for the Slot 5 FAQ accordion.
class FaqItem {
  const FaqItem({required this.question, required this.answer});

  final String question;
  final String answer;
}
